--- a/scss/main-sections/_banner.scss
+++ b/scss/main-sections/_banner.scss
@@ -1,6 +1,4 @@
 div.banner-container{
-    padding: calc(( 550px - 360.6px ) / 2) 0 !important;
-    width: 100vw;
     div.image-container{
         background-image: url("../assets/images/banners/why--choose--us.png"),
                       url("../assets/images/banners/why--choose--us.jpg");
@@ -11,8 +9,10 @@ div.banner-container{
         // width: 100vw !important;
         height: 608.6px !important;
         
-        div.why-choose-us{
-            @include banner("why--choose--us");
+        div.container{
+            div.why-choose-us{
+                @include banner("why--choose--us");
+            }
         }
         // div.bespoke--software{
         //     @include banner($bespoke--software);
