--- a/scss/main-sections/_header.scss
+++ b/scss/main-sections/_header.scss
@@ -1,6 +1,6 @@
 header{
     div.inner{
-        padding: 20px 0;
+        padding: 17px 0;
         div.container{
             div.row{
                 display: flex;
